# gitsage

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.tsx  env.d.ts  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  persistence.rs  state.rs
src-tauri/src/ai/: prompts.rs  provider.rs
src-tauri/src/commands/: ai.rs  branch.rs  commit.rs  github.rs  merge.rs  mod.rs  remote.rs  repo.rs  stash.rs  submodule.rs  tag.rs  workspace.rs  worktree.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: cli.rs  diff.rs  libgit.rs  mod.rs  patch.rs  repository.rs
src-tauri/src/github/: auth.rs  client.rs  mod.rs  types.rs
src-tauri/src/watcher/: mod.rs
src/components/: BlameView.tsx  CloneDialog.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  FileHistory.tsx  RepoPickerDialog.module.css  RepoPickerDialog.tsx  UpdateDialog.module.css  UpdateDialog.tsx
src/config/: toolbarMenus.ts
src/hooks/: index.ts  useRepoOperations.ts  useShortcuts.ts  useTheme.ts
src/i18n/: en-US.json  index.ts  zh-CN.json
src/providers/: AppProviders.tsx
src/services/: ai.ts  git.ts  github.ts  ipc.ts  updater.ts
src/stores/: github.ts  repo.ts  settings.ts  ui.ts  updater.ts
src/types/: ai.ts  git.ts  github.ts  index.ts
src/utils/: createPersisted.ts  diffParser.ts  format.ts  logger.ts
src/views/: index.ts  (+13 more)
(+43 files in other folders)
