[package]
name = "gitsage"
version = "0.1.1"
description = "AI-First Git Desktop Client"
authors = ["GitSage Team"]
edition = "2021"

[lib]
name = "gitsage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
notify = "7"
notify-debouncer-mini = "0.5"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
